--- a/index.html
+++ b/index.html
@@ -4,76 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dejando huellas</title>
+    <title>Kelyblog</title>
 </head>
 <body>
     <header>
-        <div>
-            <img height="40px" src="https://img2.freepng.es/20180629/isx/kisspng-dog-paw-logo-clip-art-pattem-5b36f6d2ea1dc9.155962871530328786959.jpg" alt="logo">
-            <span class="dejando_ huellas">Dejando huellas<span>
-        </div>
-
-        <nav class="navbar">
+            <nav class="navbar">
             <ul class="links_navegación">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Adopta</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Favoritos</a></li>
+                <li><a href="#">Momentos</a></li>
             </ul>
         </nav>
         <div>
-            <h1>Bienvenid@ al mundo de los perritos<h1>
+            <h1>Bienvenid@s a mi blog<h1>
         </div>    
     </header>
     <main>
     <section id="Bienvenida">
-        <h2 class="subtitulos">Es un mundo increible y lleno de mucho amor</h2>
-        <div>
-            <img height="260px" src="https://www.tiempox.com/u/fotografias/m/2022/7/16/f608x342-38173_67896_15.png" alt="cachorrito">
-            <p>La vida es más linda y divertida gracias a ellos.
-            </p>
-        </div>
+        <h2 class="subtitulos">Breve resumen</h2>
+        
     </section> 
 
     <section id="Introducción">
         <div>
                 <p>
-                En este sitio amamos  los perritos, por eso
-                queremos darles el reconocimiento que se merecen.
-                Aquí te diremos por qué son nuestros mejores
-                amigos.
+                Hola mi nombre es Kelys y me recibí como licenciada en Comercio Internacional, pero quiero 
+                incursionar <br> en éste nuevo mundo digital por varios motivos que detallo a continuación:
                 </p>
                 <p>
                     <ul>
-                        <li>Te aman solo por existir</li>
-                        <li>Siempre te reciben con alegría cuando llegas a casa</li>
-                        <li>Son súper leales</li>
+                        <li>Quiero estar cerca de mi familia</li>
+                        <li>Poder movilizarme a cualquier parte sin las típicas restricciones laborales</li>
+                        <li>Merezco lo que deseo</li>
                     </ul>
                 </p>
         </div>    
             <article>
-                <h3 class="subtitulos">Conoce la historia de Eli 
-                y cacho, rocky y pichichi</h3>
+                <h3 class="subtitulos">Cosas que me gustan y no me gustan</h3>
                 <div>
                     <p>
-                    Eli es una chica de Castelar, Buenos Aires.
-                    Actualmente vive en su casa con tres adorables
-                    cachorros.     
+                    Me encanta comer, el orden e higiene. También ir de paseo a espacios naturales y compartir con amig@s
+
                     </p>
                     <p>
-                        Cacho, Rocky y pichichi, fueron rescatados <br> de la calle. Eli 
-                        los encontró en una caja al costado del camino.
+                    No me gustan las aceitunas ni el pan con frutas. Tampoco los conflictos, ni las injusticias y menos las mentiras.   
                     </p>
                 </div>
-                <p><a href="#">Lee la hostoria complet aquí</a></p>
+                <p><a href="#">Más sobre mí</a></p>
             </article>    
         </section>   
         </main>  
 
         <footer>
             <ul>
-                <li>Contactanos</li>
-                <li>Trabaja con nosotros</li>
+                <li>Contacto</li>
+                <li>Sígueme</li>
             </footer>
         </ul>    
         </body>
